Fix issue with rt-benchmarking (#3898)
After reverting a previous PR some changes were lost. This PR
re-introduces those changes along with the most recent fixes

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -45,9 +45,9 @@
     "\n",
     "Before starting this tutorial, be sure you have the following installed:\n",
     "\n",
-    "- Qiskit SDK v1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime v0.29 or later ( `pip install qiskit-ibm-runtime` )\n",
-    "- Qiskit Experiments v0.7 or later ( `pip install qiskit-experiments` )\n",
+    "- Qiskit SDK v2.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
+    "- Qiskit Runtime v0.40 or later ( `pip install qiskit-ibm-runtime` )\n",
+    "- Qiskit Experiments v0.12 or later ( `pip install qiskit-experiments` )\n",
     "- Rustworkx graph library (`pip install rustworkx`)"
    ]
   },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4766c18a-ba45-456b-8b78-6b6f1d214586",
    "metadata": {},
    "outputs": [],
@@ -103,14 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "64c25da9-a728-4ae4-a377-3078a1dc618d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/docs/images/tutorials/real-time-benchmarking-for-qubit-selection/extracted-outputs/95571eca-02ba-4452-816a-c04822675be8-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/docs/images/tutorials/real-time-benchmarking-for-qubit-selection/extracted-outputs/64c25da9-a728-4ae4-a377-3078a1dc618d-0.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/tutorials/real-time-benchmarking-for-qubit-selection/extracted-outputs/64c25da9-a728-4ae4-a377-3078a1dc618d-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
      "metadata": {},
@@ -142,12 +152,13 @@
    "id": "16948f21-a39b-4444-bf02-5f81331825c4",
    "metadata": {},
    "source": [
-    "### Set up backend and coupling map"
+    "### Set up backend and coupling map\n",
+    "First, select a backend"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f968acca-9131-4f5d-aa74-70befcdda4f5",
    "metadata": {},
    "outputs": [],
@@ -162,17 +173,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90b0ddab-0d35-4784-8575-fe0505699197",
+   "metadata": {},
+   "source": [
+    "Then obtain its coupling map"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "62b36ded-ab4e-414e-b146-ff522786a871",
+   "execution_count": 5,
+   "id": "86d84baa-bd5e-4faf-9582-4568ab4c4a4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "coupling_graph = backend.coupling_map.graph.to_undirected(multigraph=False)\n",
     "\n",
     "# Get unidirectional coupling map\n",
-    "one_dir_coupling_map = coupling_graph.edge_list()\n",
-    "\n",
+    "one_dir_coupling_map = coupling_graph.edge_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d48b5ba2-74ec-4484-9ba6-b0681ae32919",
+   "metadata": {},
+   "source": [
+    "In order to benchmark as many two-qubit gates as possible simultaneously we separate the coupling map into a `layered_coupling_map`. This object contains a list of layers where each layer is a list of edges on which two-qubit gates can be executed at the same time. This is also called an edge coloring of the coupling map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "62b36ded-ab4e-414e-b146-ff522786a871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get layered coupling map\n",
     "edge_coloring = rustworkx.graph_bipartite_edge_color(coupling_graph)\n",
     "layered_coupling_map = defaultdict(list)\n",
@@ -183,11 +218,7 @@
     "layered_coupling_map = [\n",
     "    sorted(layered_coupling_map[i])\n",
     "    for i in sorted(layered_coupling_map.keys())\n",
-    "]\n",
-    "\n",
-    "flattened_layered_coupling_map = []\n",
-    "for layer in layered_coupling_map:\n",
-    "    flattened_layered_coupling_map += layer"
+    "]"
    ]
   },
   {
@@ -226,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "9d57c42d-7a91-4e79-bc6c-6e579da929f8",
    "metadata": {},
    "outputs": [],
@@ -236,9 +267,7 @@
     "    [\n",
     "        T1(\n",
     "            physical_qubits=[qubit],\n",
-    "            delays=np.linspace(\n",
-    "                1e-6, 2 * backend.properties().t1(qubit), 5, endpoint=True\n",
-    "            ),\n",
+    "            delays=[1e-6, 20e-6, 40e-6, 80e-6, 200e-6, 400e-6],\n",
     "        )\n",
     "        for qubit in qubits\n",
     "    ],\n",
@@ -251,9 +280,7 @@
     "    [\n",
     "        T2Hahn(\n",
     "            physical_qubits=[qubit],\n",
-    "            delays=np.linspace(\n",
-    "                1e-6, 2 * backend.properties().t2(qubit), 5, endpoint=True\n",
-    "            ),\n",
+    "            delays=[1e-6, 20e-6, 40e-6, 80e-6, 200e-6, 400e-6],\n",
     "        )\n",
     "        for qubit in qubits\n",
     "    ],\n",
@@ -311,15 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "af1b6722-e77b-436a-bbcd-f272b95bb28c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "instruction_2q_name = \"cz\"  # set the name of the default 2q of the device\n",
     "errors_list = []\n",
     "for day_idx in range(10, 17):\n",
     "    calibrations_time = datetime(\n",
-    "        year=2024, month=10, day=day_idx, hour=0, minute=0, second=0\n",
+    "        year=2025, month=8, day=day_idx, hour=0, minute=0, second=0\n",
     "    )\n",
     "    targer_hist = backend.target_history(datetime=calibrations_time)\n",
     "\n",
@@ -330,7 +358,7 @@
     "\n",
     "    errors_dict = {\n",
     "        \"1q\": targer_hist[\"sx\"],\n",
-    "        \"2q\": targer_hist[\"ecr\"],\n",
+    "        \"2q\": targer_hist[f\"{instruction_2q_name}\"],\n",
     "        \"spam\": targer_hist[\"measure\"],\n",
     "        \"t1\": t1_dict,\n",
     "        \"t2\": t2_dict,\n",
@@ -349,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e0ba509d-e0e0-438b-aedf-5e01919c7d4f",
    "metadata": {},
    "outputs": [
@@ -372,7 +400,10 @@
     "    t1s = []\n",
     "    for errors_dict in errors_list:\n",
     "        t1_dict = errors_dict[\"t1\"]\n",
-    "        t1s.append(t1_dict[qubit] / 1e-6)\n",
+    "        try:\n",
+    "            t1s.append(t1_dict[qubit] / 1e-6)\n",
+    "        except:\n",
+    "            print(f\"missing t1 data for qubit {qubit}\")\n",
     "\n",
     "    axs[0].plot(t1s)\n",
     "\n",
@@ -385,7 +416,10 @@
     "    t2s = []\n",
     "    for errors_dict in errors_list:\n",
     "        t2_dict = errors_dict[\"t2\"]\n",
-    "        t2s.append(t2_dict[qubit] / 1e-6)\n",
+    "        try:\n",
+    "            t2s.append(t2_dict[qubit] / 1e-6)\n",
+    "        except:\n",
+    "            print(f\"missing t2 data for qubit {qubit}\")\n",
     "\n",
     "    axs[1].plot(t2s)\n",
     "\n",
@@ -474,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5c0d09ad-2e6a-4067-8034-8df92a475ff1",
    "metadata": {},
    "outputs": [],
@@ -507,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a8266467-9d60-411f-89dd-8cad6558f588",
    "metadata": {},
    "outputs": [],
@@ -547,7 +581,9 @@
     "        \"Local Readout Mitigator\"\n",
     "    )\n",
     "\n",
-    "    EPG_ecr_result_list = batches_exp_data.analysis_results(\"EPG_ecr\")\n",
+    "    EPG_2q_result_list = batches_exp_data.analysis_results(\n",
+    "        f\"EPG_{instruction_2q_name}\"\n",
+    "    )\n",
     "\n",
     "    # Update target properties\n",
     "    target = copy.deepcopy(backend.target)\n",
@@ -590,22 +626,22 @@
     "                i\n",
     "            ].value.nominal_value\n",
     "\n",
-    "    for pair_idx, pair in enumerate(flattened_layered_coupling_map):\n",
+    "    for pair_idx, pair in enumerate(one_dir_coupling_map):\n",
     "        qarg = tuple(pair)\n",
     "        try:\n",
     "            target.update_instruction_properties(\n",
-    "                instruction=\"ecr\",\n",
+    "                instruction=instruction_2q_name,\n",
     "                qargs=qarg,\n",
     "                properties=InstructionProperties(\n",
-    "                    error=EPG_ecr_result_list[pair_idx].value.nominal_value\n",
+    "                    error=EPG_2q_result_list[pair_idx].value.nominal_value\n",
     "                ),\n",
     "            )\n",
     "        except:\n",
     "            target.update_instruction_properties(\n",
-    "                instruction=\"ecr\",\n",
+    "                instruction=instruction_2q_name,\n",
     "                qargs=qarg[::-1],\n",
     "                properties=InstructionProperties(\n",
-    "                    error=EPG_ecr_result_list[pair_idx].value.nominal_value\n",
+    "                    error=EPG_2q_result_list[pair_idx].value.nominal_value\n",
     "                ),\n",
     "            )\n",
     "\n",
@@ -654,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "5a19a5d1-5daf-4d65-9785-8f8724853821",
    "metadata": {},
    "outputs": [],
@@ -687,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "656ec97a-3fd9-4635-9a98-1c5589761689",
    "metadata": {},
    "outputs": [
@@ -738,7 +774,7 @@
    "id": "3705d85c-e11d-4a8f-bfae-20bd501124d8",
    "metadata": {},
    "source": [
-    "With increasing chain length, and thus less freedom to choose physical qubits, the fact that we have updated information about qubit properties becomes less substantial, with there being no difference when all of the qubits are used."
+    "Not all runs will show improvement in performance due to the real-time characterization - and with increasing chain length, and thus less freedom to choose physical qubits, the importance of updated device information becomes less substantial. However, it is good practice to collect fresh data on the device properties to understand its performance. Occasionally, transient two-level systems may affect the performance of some of the qubits. Real-time data can inform us when such events are happening and help us avoid experimental failures in such instances."
    ]
   },
   {
@@ -783,7 +819,12 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Real-time benchmarking for qubit selection\n"
+  "title": "Real-time benchmarking for qubit selection\n",
+  "vscode": {
+   "interpreter": {
+    "hash": "72460b19b35c51a2148375679c8e282bc3cd3c5550c209f0a38b7d09cded82d9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
