--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -73,8 +73,14 @@ Your user account is associated with one or more [instances,](./instances) ident
     2. Optional: Find the instance you want to use from the [Instances](https://quantum.cloud.ibm.com/instances) page. Click the icon to copy its CRN, then save it in a secure location so you can use it to identify the instance.
 
 <span id="cloud-save"></span>
-### 3. Connect Qiskit with your service instance
+### 3. Save your access credentials
 If you are working in a trusted Python environment (such as on a personal laptop or workstation), use the `save_account()` method to save your credentials locally, then use them to initialize the service.
+
+<Admonition type="note" title="Notes">
+      * If you are not using a trusted environment, follow the instructions in [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) instead. For example, if you are using a public comptuer.
+      * Follow [these instructions](/docs/guides/cloud-setup-rest-api) if you want to connect by using the REST API instead of using Qiskit.
+      * If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to configure your firewall to enable access to the IBM Quantum API endpoints.
+</Admonition>
 
 1. Ensure you are working in an active Python environment with the [Qiskit SDK and Qiskit Runtime installed](/docs/guides/install-qiskit#local).
 1. Activate the Python virtual environment, run Python in your virtual environment, and enter the following:
@@ -82,45 +88,51 @@ If you are working in a trusted Python environment (such as on a personal laptop
     ```python
     token = "<your-API-token>"
     ```
-2. Initialize the service.
-<Admonition type="Note">
-When an instance CRN or name is passed in, only backends and jobs from that instance are available.  If an instance is not specified (allowed in Qiskit Runtime v0.40.1 and later), all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access that backend is found and used.
-</Admonition>
+2. Save your credentials. Run this once per account you want to save.
 
 ```python
   from qiskit_ibm_runtime import QiskitRuntimeService
-  service = QiskitRuntimeService.save_account(
-    token="token", # IBM Cloud API key.
-    # Your token is confidential. Do not share your token in public code.
-    instance="<IBM Cloud CRN or instance name>", # Optionally specify the instance to use.
-    plans_preference="['open', 'premium']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
-    # Additionally, instances of a certain plan type are excluded if the plan name is not specified.
-    region="us-east", # Optionally set the region to prioritize. Accepted values are 'us-east' or 'eu-de'. This is ignored if the instance is specified.
-    name="<account-name>", # Optionally name this set of account credentials.
-    set_as_default=True, # Optionally set these as your default credentials.
+
+  QiskitRuntimeService.save_account(
+    token="token",
+    instance="<IBM Cloud CRN or instance name>", # Optional
+    plans_preference="['open', 'premium']", # Optional
+    region="<region>", # Optional
+    name="<account-name>", # Optional
+    set_as_default=True, # Optional
+    overwrite=True, # Optional
   )
 ```
 
+Options:
 
-      ```python
+-**`token`**: IBM Cloud API key. Your token is confidential. Do not share your token in public code.
+-**`instance`**: Optionally specify the instance to use.
+-**`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are 'open' and 'premium'. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only open plan instances are available.
+-**`region`**: Optionally set the region to use. Accepted values are 'us-east' and 'eu-de'. This is ignored if the instance is specified.
+-**`name`**: Optionally name this set of account credentials.
+-**`set_as_default`**: Set the value to `True` to save these as your default credentials. If you save only one account, it is automatically set as the default.
+-**`overwrite`**: Set this value to `True` to update your default credentials.
+
+#### Considerations
+
+* If you are saving multiple accounts, consider using the `name` parameter to differentiate them.
+* Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
+* If you don't save your credentials, you must specify them every time you start a new session.
+* If you manually specify your credentials, a saved account will not be used.
+
+### 4. Initialize the service
+
+Every time you need to instantiate a `QiskitRuntimeService` with the default saved account, run the following:
+
+ ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
 
-    # If you named your credentials, optionally specify the name here, as follows:
-    # QiskitRuntimeService(name='account-name')
-    # If you don't specify a name, the default credentials are loaded.
     service = QiskitRuntimeService()
-       ```
-      * If you are saving multiple accounts, consider using the `name` parameter to differentiate them.
-      * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
-      * If you don't save your credentials, you must specify them every time you start a new session.
-      * If you specify your credentials, a saved account will not be used.
+    ...
+  ```
 
-    <Admonition type="note" title="Notes">
-      * Follow [these instructions](/docs/guides/cloud-setup-untrusted) to authenticate to IBM Cloud if you are not using a trusted environment. For example, if you are using a public comptuer.
-      * Follow [these instructions](/docs/guides/cloud-setup-rest-api) if you want to connect by using the REST API instead of using Qiskit.
-      * If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to configure your firewall to enable access to the IBM Quantum API endpoints.
-    </Admonition>
-
+See the [Initialize the service](/docs/guides/initialize-account) guide for more details about instantiating the `QiskitRuntimeService`.
 
 ## Next steps
 
