--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -179,7 +179,7 @@ Duration of the two-qubit gate operation.
 <span id="2q-error"></span>
 ### 2Q error (Heron: CZ, Eagle: ECR)
 
-Error in the 2Q gate averaged over the 2Q angles using a variant of randomized benchmarking for arbitrary unitaries.
+The 2Q error per edge from the same batch of measurements used to calculate the [2Q median](#median-2q-error-heron-cz-eagle-ecr) and [2Q best](#2q-error-best) errors.
 
 ### RZZ error (Heron)
 
