--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -154,7 +154,7 @@ The readout_length specifies the duration of the readout operation for a qubit. 
 <span id="finite-duration-discrete"></span>
 ### ID error / √x (sx) error / Pauli-X error / RX error
 
-Error in the finite-duration discrete one-qubit gates, measured from randomized benchmarking. The randomized benchmarking sequence includes SX, ID, X, and RX gates, and it is assumed their errors are the same. The ID gate is a delay of duration equal to the duration of the √X and X gates. The RX gate is also the same duration of the √X and X gates with variable amplitude, and so it is reported as having the same error as these gates.
+Error in the finite-duration discrete one-qubit gates, measured from randomized benchmarking. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same. The ID gate is a delay of duration equal to the duration of the √X and X gates. The RX gate is also the same duration as the √X and X gates with variable amplitude, and so it is reported as having the same error as these gates.
 
 ### Single-qubit gate length (ns)
 
